--- a/App.Web/Views/SummerySubmission/CreateMulti.cshtml
+++ b/App.Web/Views/SummerySubmission/CreateMulti.cshtml
@@ -51,8 +51,14 @@
             <table class="table-bordered">
                 <tr>
                     <th>তথ্যের উৎস</th>
-                    <th>কতজনের সাক্ষাত নেয়া হয়েছে</th>
-                    <th>পিন (যার কাছ থেকে ডাটা নেয়া হয়েছে )</th>
+                    <th>
+                        কতজনের সাক্ষাত নেয়া হয়েছে
+                       <span data-toggle="tooltip" data-placement="right" title="Number of individuals who have been contacted <br> যোগাযোগ করা হয়েছে এমন ব্যক্তিদের সংখ্যা"><img src="~/Content/tools.png" width="30" /></span>
+                    </th>
+                    <th>
+                        পিন (যার কাছ থেকে ডাটা নেয়া হয়েছে )
+                        <span data-toggle="tooltip" data-placement="bottom" title=" PIN of the staff who has given you the data<br>যে কর্মী থেকে আপনি তথ্য নিয়েছেন তার পিন"><img src="~/Content/tools.png" width="30" /></span>
+                    </th>
                 </tr>
                 @for (int i = 0; i < Model.MultiDatas.Count; i++)
                 {
@@ -76,6 +82,8 @@
     <tr>
         <td class="title">
             মন্তব্য
+            <span data-toggle="tooltip" data-placement="right" title="Enter any comments or feedback that you may have<br>আপনার কোনো মন্তব্য থাকলে তা লিখুন 
+"><img src="~/Content/tools.png" width="30" /></span>
         </td>
         <td class="control">
             @Html.TextAreaFor(model => model.Description)
@@ -95,8 +103,18 @@
 }
 <script type="text/javascript">
     ValidatateForm("form0");
+
+
     $(document).ready(function () {
 
+        $('[data-toggle="tooltip"]').tooltip(
+            {
+                "html": true
+            }
+        );
+    });
+    $(document).ready(function () {
+        
         $("#save-submit").click(function () {
 
             if (!confirm("Do you want to Save?")) {
